--- a/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.html
+++ b/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.html
@@ -8,9 +8,9 @@
             <li class="nested" [class.expand]="showMenu === 'pages'">
                 <ul class="submenu">
                     <li>
-                        <a href="javascript:void(0)">
+                        <a [routerLink]="['/create-docket']" [routerLinkActive]="['router-link-active']">
                             <i class="fa fa-monument"></i>&nbsp;
-                            <span>{{ 'Submenu' | translate }}</span>
+                            <span>{{ 'create docket' | translate }}</span>
                         </a>
                     </li>
                     <li>
