completed creating a docket

--- a/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.html
+++ b/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
             <li class="nested" [class.expand]="showMenu === 'pages'">
                 <ul class="submenu">
                     <li>
-                        <a [routerLink]="['/create-docket']" [routerLinkActive]="['router-link-active']">
+                        <a href="javascript:void(0)" [routerLink]="['/create-docket']" [routerLinkActive]="['router-link-active']">
                             <i class="fa fa-monument"></i>&nbsp;
                             <span>{{ 'create docket' | translate }}</span>
                         </a>
