--- a/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.scss
@@ -43,7 +43,7 @@ $topnav-background-color: #222;
         }
         .header-fields {
             padding-top: 10px;
-        
+
             > .list-group-item:first-child {
                 border-top: 1px solid rgba(255, 255, 255, 0.2);
             }
@@ -81,7 +81,7 @@ $topnav-background-color: #222;
             background: darken($topnav-background-color, 5%);
         }
         .panel-collapse {
-            border-radious: 0;
+            border-radius: 0;
             border: none;
             .panel-body {
                 .list-group-item {
