Added case and case-routing.module

--- a/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.html
+++ b/UI/TADHACK/src/app/layout/components/sidebar/sidebar.component.html
@@ -13,24 +13,13 @@
                             <span>{{ 'Submenu' | translate }}</span>
                         </a>
                     </li>
-                    <li>
-                        <a href="javascript:void(0)">
-                            <i class="fa fa-monument"></i>&nbsp;
-                            <span>{{ 'Submenu' | translate }}</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0)">
-                            <i class="fa fa-monument"></i>&nbsp;
-                            <span>{{ 'Submenu' | translate }}</span>
-                        </a>
-                    </li>
                 </ul>
             </li>
         </div>
-        <a [routerLink]="['/blank-page']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+
+        <a [routerLink]="['/cases']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-file-o"></i>&nbsp;
-            <span>{{ 'Blank Page' | translate }}</span>
+            <span>{{ 'Cases' | translate }}</span>
         </a>
 
     </div>
