--- a/UI/TADHACK/src/app/layout/detective/cases/cases.component.html
+++ b/UI/TADHACK/src/app/layout/detective/cases/cases.component.html
@@ -1,4 +1,6 @@
 <div>
+    <h1>My Cases</h1>
+
     <div class="row">
         <div class="col-sm-4" *ngFor="let case of cases" (click)="openCase()">
             <div class="card text-white bg-info mb-3">
